--- a/expensetracker/Resources/de.lproj/Localizable.strings
+++ b/expensetracker/Resources/de.lproj/Localizable.strings
@@ -1,3 +1,5 @@
 "language" = "de";
 "tab-list" = "Ausgaben";
 "tab-report" = "Bericht";
+"list-page-title" = "Dashboard";
+"add-page-title" = "Add transaction";
